(chore): add rbac chart

--- a/components/argo-system/kubechecks/kustomization.yaml
+++ b/components/argo-system/kubechecks/kustomization.yaml
@@ -8,7 +8,14 @@ resources:
 helmCharts:
   - name: kubechecks
     releaseName: kubechecks
-    namespace: kubechecks
+    namespace: argo-system
     repo: https://zapier.github.io/kubechecks/
     version: "0.5.6"
     valuesFile: values.yaml
+  - name: kubechecks-rbac
+    releaseName: kubechecks-rbac
+    namespace: argo-system
+    repo: https://zapier.github.io/kubechecks/
+    version: "0.4.5"
+    valuesInline:
+      namespace: "argo-system"
