--- a/components/argo-system/kubechecks/kustomization.yaml
+++ b/components/argo-system/kubechecks/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: argo-system
 resources:
   - ./externalsecret.yaml
+  - ./http-route.yaml
 
 helmCharts:
   - name: kubechecks
