--- a/components/kube-system/fstrim/kustomization.yaml
+++ b/components/kube-system/fstrim/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: kube-system
 
 helmCharts:
-  - name: fstrim
+  - name: app-template
     releaseName: fstrim
     namespace: kube-system
     repo: oci://ghcr.io/bjw-s-labs/helm
