--- a/.github/workflows/pr-webhook.yaml
+++ b/.github/workflows/pr-webhook.yaml
@@ -18,9 +18,6 @@ jobs:
         uses: tj-actions/changed-files@24d32ffd492484c1d75e0c0b894501ddb9d30d62 # v47
         with:
           files_yaml: |
-            cluster01:
-              - 'clusters/cluster01/**'
-              - 'components/**'
             omv:
               - 'clusters/omv/**'
               - 'components/**'
@@ -33,9 +30,7 @@ jobs:
           WEBHOOK_SECRET: ${{ secrets.WEBHOOK_SECRET }}
 
           # Changed files information
-          CLUSTER01_CHANGED_FILES: ${{ steps.changed-files.outputs.cluster01_all_changed_files }}
           OMV_CHANGED_FILES: ${{ steps.changed-files.outputs.omv_all_changed_files }}
-          CLUSTER01_ANY_CHANGED: ${{ steps.changed-files.outputs.cluster01_any_changed }}
           OMV_ANY_CHANGED: ${{ steps.changed-files.outputs.omv_any_changed }}
 
           # GitHub event information
@@ -43,13 +38,11 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_EVENT_NUMBER: ${{ github.event.number }}
 
-          # Pull Request information
+          # Pull Request information (only what's used in payload)
           PR_ID: ${{ github.event.pull_request.id }}
           PR_NODE_ID: ${{ github.event.pull_request.node_id }}
           PR_TITLE: ${{ github.event.pull_request.title }}
           PR_HTML_URL: ${{ github.event.pull_request.html_url }}
-          PR_STATE: ${{ github.event.pull_request.state }}
-          PR_LOCKED: ${{ github.event.pull_request.locked }}
           PR_BODY: ${{ github.event.pull_request.body }}
           PR_CREATED_AT: ${{ github.event.pull_request.created_at }}
           PR_UPDATED_AT: ${{ github.event.pull_request.updated_at }}
@@ -62,14 +55,8 @@ jobs:
           PR_HEAD_REF: ${{ github.event.pull_request.head.ref }}
           PR_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
           PR_HEAD_LABEL: ${{ github.event.pull_request.head.label }}
-          PR_BASE_REF: ${{ github.event.pull_request.base.ref }}
-          PR_BASE_SHA: ${{ github.event.pull_request.base.sha }}
-          PR_BASE_LABEL: ${{ github.event.pull_request.base.label }}
-          PR_AUTHOR_ASSOCIATION: ${{ github.event.pull_request.author_association }}
-          PR_AUTO_MERGE: ${{ github.event.pull_request.auto_merge }}
-          PR_ACTIVE_LOCK_REASON: ${{ github.event.pull_request.active_lock_reason }}
 
-          # Sender information
+          # Sender information (used in pull_request.user and sender)
           SENDER_LOGIN: ${{ github.event.sender.login }}
           SENDER_ID: ${{ github.event.sender.id }}
           SENDER_NODE_ID: ${{ github.event.sender.node_id }}
@@ -79,41 +66,13 @@ jobs:
           SENDER_TYPE: ${{ github.event.sender.type }}
           SENDER_SITE_ADMIN: ${{ github.event.sender.site_admin }}
 
-          # Repository information
+          # Repository information (used in repository and pull_request.head.repo)
           REPO_ID: ${{ github.event.repository.id }}
           REPO_NODE_ID: ${{ github.event.repository.node_id }}
           REPO_NAME: ${{ github.event.repository.name }}
-          REPO_HTML_URL: ${{ github.event.repository.html_url }}
-          REPO_DESCRIPTION: ${{ github.event.repository.description }}
           REPO_PRIVATE: ${{ github.event.repository.private }}
-          REPO_FORK: ${{ github.event.repository.fork }}
-          REPO_CREATED_AT: ${{ github.event.repository.created_at }}
-          REPO_UPDATED_AT: ${{ github.event.repository.updated_at }}
-          REPO_PUSHED_AT: ${{ github.event.repository.pushed_at }}
-          REPO_HOMEPAGE: ${{ github.event.repository.homepage }}
-          REPO_SIZE: ${{ github.event.repository.size }}
-          REPO_STARGAZERS_COUNT: ${{ github.event.repository.stargazers_count }}
-          REPO_WATCHERS_COUNT: ${{ github.event.repository.watchers_count }}
-          REPO_LANGUAGE: ${{ github.event.repository.language }}
-          REPO_HAS_ISSUES: ${{ github.event.repository.has_issues }}
-          REPO_HAS_PROJECTS: ${{ github.event.repository.has_projects }}
-          REPO_HAS_WIKI: ${{ github.event.repository.has_wiki }}
-          REPO_HAS_PAGES: ${{ github.event.repository.has_pages }}
-          REPO_HAS_DOWNLOADS: ${{ github.event.repository.has_downloads }}
-          REPO_ARCHIVED: ${{ github.event.repository.archived }}
-          REPO_DISABLED: ${{ github.event.repository.disabled }}
-          REPO_OPEN_ISSUES_COUNT: ${{ github.event.repository.open_issues_count }}
-          REPO_LICENSE: ${{ github.event.repository.license }}
-          REPO_ALLOW_FORKING: ${{ github.event.repository.allow_forking }}
-          REPO_IS_TEMPLATE: ${{ github.event.repository.is_template }}
-          REPO_WEB_COMMIT_SIGNOFF_REQUIRED: ${{ github.event.repository.web_commit_signoff_required }}
-          REPO_VISIBILITY: ${{ github.event.repository.visibility }}
-          REPO_FORKS: ${{ github.event.repository.forks }}
-          REPO_OPEN_ISSUES: ${{ github.event.repository.open_issues }}
-          REPO_WATCHERS: ${{ github.event.repository.watchers }}
-          REPO_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
 
-          # Repository owner information
+          # Repository owner information (used in repository.owner and pull_request.head.repo.owner)
           REPO_OWNER_LOGIN: ${{ github.event.repository.owner.login }}
           REPO_OWNER_ID: ${{ github.event.repository.owner.id }}
           REPO_OWNER_NODE_ID: ${{ github.event.repository.owner.node_id }}
@@ -122,10 +81,6 @@ jobs:
           REPO_OWNER_HTML_URL: ${{ github.event.repository.owner.html_url }}
           REPO_OWNER_TYPE: ${{ github.event.repository.owner.type }}
           REPO_OWNER_SITE_ADMIN: ${{ github.event.repository.owner.site_admin }}
-
-          # Installation information
-          INSTALLATION_ID: ${{ github.event.installation.id }}
-          INSTALLATION_NODE_ID: ${{ github.event.installation.node_id }}
 
           # GitHub webhook headers
           X_GITHUB_EVENT: ${{ github.event_name }}
