--- a/.github/workflows/pr-webhook.yaml
+++ b/.github/workflows/pr-webhook.yaml
@@ -43,6 +43,8 @@ jobs:
           PR_NODE_ID: ${{ github.event.pull_request.node_id }}
           PR_TITLE: ${{ github.event.pull_request.title }}
           PR_HTML_URL: ${{ github.event.pull_request.html_url }}
+          PR_STATE: ${{ github.event.pull_request.state }}
+          PR_LOCKED: ${{ github.event.pull_request.locked }}
           PR_BODY: ${{ github.event.pull_request.body }}
           PR_CREATED_AT: ${{ github.event.pull_request.created_at }}
           PR_UPDATED_AT: ${{ github.event.pull_request.updated_at }}
@@ -70,6 +72,7 @@ jobs:
           REPO_ID: ${{ github.event.repository.id }}
           REPO_NODE_ID: ${{ github.event.repository.node_id }}
           REPO_NAME: ${{ github.event.repository.name }}
+          REPO_HTML_URL: ${{ github.event.repository.html_url }}
           REPO_PRIVATE: ${{ github.event.repository.private }}
 
           # Repository owner information (used in repository.owner and pull_request.head.repo.owner)
