--- a/.github/workflows/pr-webhook.yaml
+++ b/.github/workflows/pr-webhook.yaml
@@ -14,6 +14,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
       - name: Setup Workflow Tools
         shell: bash
         run: brew install jq
