(chore): add github event static

--- a/.github/workflows/pr-webhook.yaml
+++ b/.github/workflows/pr-webhook.yaml
@@ -42,8 +42,6 @@ jobs:
           OMV_ANY_CHANGED: ${{ steps.changed-files.outputs.omv_any_changed }}
 
           GITHUB_CONTEXT: ${{ toJson(github) }}
-          # GitHub webhook headers
-          X_GITHUB_EVENT: ${{ github.event_name }}
         run: |
           # Debug: Show critical GitHub context
           echo "🔍 GitHub Event Debug Info:"
@@ -55,7 +53,7 @@ jobs:
             echo "✅ OMV files changed, preparing webhook..."
 
             # Add cluster information to GitHub context
-            echo "$GITHUB_CONTEXT" | jq '. + {"cluster": "omv", "X_GITHUB_EVENT": env.X_GITHUB_EVENT}' > github_context_with_cluster.json
+            echo "$GITHUB_CONTEXT" | jq '. + {"cluster": "omv", "X_GITHUB_EVENT": "issues"}' > github_context_with_cluster.json
 
             # Send webhook with cluster information
             curl -X POST "$WEBHOOK_URL" \
