--- a/.github/workflows/pr-webhook.yaml
+++ b/.github/workflows/pr-webhook.yaml
@@ -53,7 +53,7 @@ jobs:
             echo "✅ OMV files changed, preparing webhook..."
 
             # Add cluster information to GitHub context
-            echo "$GITHUB_CONTEXT" | jq '. + {"cluster": "omv"}' > github_context_with_cluster.json
+            echo "$GITHUB_CONTEXT" | jq '. + {"cluster": "omv", "event_name": "pull_request"}' > github_context_with_cluster.json
 
             # Send webhook with cluster information
             curl -X POST "$WEBHOOK_URL" \
