--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -221,6 +221,22 @@ applications:
           - name: VOLSYNC_CAPACITY
             value: 10Gi
 
+  gitea:
+    annotations:
+      argocd.argoproj.io/sync-wave: "35"
+    destination:
+      namespace: default
+    source:
+      path: components/default/gitea
+      plugin:
+        env:
+          - name: STORAGE_CLASS
+            value: longhorn-volsync
+          - name: VOLUME_SNAPSHOT_CLASS
+            value: longhorn
+          - name: VOLSYNC_CAPACITY
+            value: 10Gi
+
   kube-prometheus-stack:
     annotations:
       argocd.argoproj.io/sync-wave: "35"
