(chore): fix image

--- a/components/default/gitea/external-secret.yaml
+++ b/components/default/gitea/external-secret.yaml
@@ -18,9 +18,10 @@ spec:
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        GITEA_ADMIN_USERNAME: "{{.username}}"
-        GITEA_ADMIN_PASSWORD: "{{.password}}"
-        GITEA_ADMIN_PASSWORD_MODE: keepUpdated
+        username: "{{.username}}"
+        password: "{{.password}}"
+        email: "gitea@local.domain"
+        passwordMode: keepUpdated
   dataFrom:
     - extract:
         key: gitea
