--- a/components/default/gitea/http-route.yaml
+++ b/components/default/gitea/http-route.yaml
@@ -19,5 +19,5 @@ spec:
   hostnames: ["gitea.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: gitea
+        - name: gitea-http
           port: 3000
