(chore): fix insecure

--- a/components/default/gitea/values.yaml
+++ b/components/default/gitea/values.yaml
@@ -18,6 +18,9 @@ resources:
 
 valkey:
   enabled: true
+  global:
+    security:
+      allowInsecureImages: true
   image:
     registry: docker.io
     repository: valkey/valkey
