--- a/components/default/gitea/external-secret.yaml
+++ b/components/default/gitea/external-secret.yaml
@@ -18,6 +18,10 @@ spec:
         INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        GITEA__database__HOST: "pg17-omv-rw.default.svc.cluster.local:5432"
+        GITEA__database__NAME: "gitea"
+        GITEA__database__USER: "{{ .POSTGRES_USER }}"
+        GITEA__database__PASSWD: "{{ .POSTGRES_PASS }}"
         username: "{{.username}}"
         password: "{{.password}}"
         email: "gitea@local.domain"
