--- a/components/default/gitea/http-route.yaml
+++ b/components/default/gitea/http-route.yaml
@@ -2,10 +2,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: gitea
+  name: &app gitea
   labels:
-    app.kubernetes.io/instance: gitea
-    app.kubernetes.io/name: gitea
+    app.kubernetes.io/instance: *app
+    app.kubernetes.io/name: *app
   annotations:
     gethomepage.dev/href: "https://gitea.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
@@ -19,5 +19,5 @@ spec:
   hostnames: ["gitea.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: gitea-http
+        - name: *app
           port: 3000
