--- a/components/argo-system/kubechecks/values.yaml
+++ b/components/argo-system/kubechecks/values.yaml
@@ -13,9 +13,8 @@ configMap:
     KUBECHECKS_ARGOCD_REPOSITORY_ENDPOINT: argocd-repo-server.argo-system:8081
     KUBECHECKS_ARGOCD_API_SERVER_ADDR: argo.${CLUSTER_DOMAIN}:443
     KUBECHECKS_ARGOCD_REPOSITORY_INSECURE: "true"
-    KUBECHECKS_FALLBACK_K8S_VERSION: "1.23.0"
     KUBECHECKS_LOG_LEVEL: debug
-    KUBECHECKS_NAMESPACE: kubechecks
+    KUBECHECKS_NAMESPACE: argo-system
     KUBECHECKS_WEBHOOK_URL_BASE: https://kubechecks.${CLUSTER_DOMAIN}
     ARGOCD_EXEC_TIMEOUT: 600s
     KUBECHECKS_OTEL_ENABLED: "false"
