(chore): add apikey

--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -8,6 +8,7 @@ configs:
     server.insecure: true
     controller.diff.server.side: true
   cm:
+    accounts.admin: apiKey
     accounts.readonly: apiKey
     rbac:
       policy.csv: |
