--- a/components/volsync-system/volsync/kustomization.yaml
+++ b/components/volsync-system/volsync/kustomization.yaml
@@ -14,3 +14,5 @@ helmCharts:
     repo: https://perfectra1n.github.io/volsync/charts
     version: 0.17.11
     valuesFile: values.yaml
+    apiVersions:
+      - monitoring.coreos.com/v1
