(chore): test default

--- a/components/observability/kube-prometheus-stack/values.yaml
+++ b/components/observability/kube-prometheus-stack/values.yaml
@@ -29,13 +29,13 @@ alertmanager:
             requests:
               storage: 1Gi
 kubeEtcd:
-  enabled: ${ARGOCD_ENV_ETCD_ENABLED}
+  enabled: ${ARGOCD_ENV_ETCD_ENABLED:-false}
   service:
     selector:
       component: kube-apiserver # etcd runs on control plane nodes
 defaultRules:
   rules:
-    etcd: ${ARGOCD_ENV_ETCD_RULES_ENABLED}
+    etcd: ${ARGOCD_ENV_ETCD_RULES_ENABLED:-false}
 kubeProxy:
   enabled: false
 prometheus:
