(chore): test using inline

--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -248,6 +248,10 @@ applications:
         env:
           - name: STORAGE_CLASS
             value: longhorn-volsync
+          - name: ETCD_ENABLED
+            value: 'false'
+          - name: ETCD_RULES_ENABLED
+            value: 'false'
 
   kubechecks:
     annotations:
