--- a/components/observability/kube-prometheus-stack/kustomization.yaml
+++ b/components/observability/kube-prometheus-stack/kustomization.yaml
@@ -13,4 +13,13 @@ helmCharts:
     namespace: observability
     repo: oci://ghcr.io/prometheus-community/charts
     version: 77.12.0
+    valuesInline:
+      kubeEtcd:
+        enabled: ${ARGOCD_ENV_ETCD_ENABLED:-false}
+        service:
+          selector:
+            component: kube-apiserver # etcd runs on control plane nodes
+      defaultRules:
+        rules:
+          etcd: ${ARGOCD_ENV_ETCD_RULES_ENABLED:-false}
     valuesFile: values.yaml
