(chore): add sm

--- a/components/volsync-system/volsync/kustomization.yaml
+++ b/components/volsync-system/volsync/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: volsync-system
 resources:
   - ./mutatingadmissionpolicy.yaml
   - ./prometheusrule.yaml
+  - ./servicemonitor.yaml
 
 helmCharts:
   - name: volsync
