(fix): add schema location

--- a/components/argo-system/kubechecks/values.yaml
+++ b/components/argo-system/kubechecks/values.yaml
@@ -23,6 +23,7 @@ configMap:
     KUBECHECKS_VCS_EMAIL: "vikaspoguadf@gmail.com"
     KUBECHECKS_TIDY_OUTDATED_COMMENTS_MODE: "hide" # other options delete
     GRPC_ENFORCE_ALPN_ENABLED: "false"
+    KUBECHECKS_SCHEMAS_LOCATION: https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/{{.Group}}/{{.ResourceKind}}_{{.ResourceAPIVersion}}.json
 
 deployment:
   annotations:
