--- a/components/argo-system/kubechecks/http-route.yaml
+++ b/components/argo-system/kubechecks/http-route.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: kubechecks
+  name: &app kubechecks
 spec:
   parentRefs:
     - name: ${GATEWAY_NAME}
@@ -10,5 +10,5 @@ spec:
   hostnames: ["kubechecks.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: kubechecks
+        - name: *app
           port: 8080
