--- a/components/default/bytestash/http-route.yaml
+++ b/components/default/bytestash/http-route.yaml
@@ -2,10 +2,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: bytestash
+  name: &app bytestash
   labels:
-    app.kubernetes.io/instance: bytestash
-    app.kubernetes.io/name: bytestash
+    app.kubernetes.io/instance: *app
+    app.kubernetes.io/name: *app
   annotations:
     gethomepage.dev/href: "https://bytestash.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
@@ -19,5 +19,5 @@ spec:
   hostnames: ["bytestash.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: bytestash
+        - name: *app
           port: 5000
