--- a/components/default/homepage/http-route.yaml
+++ b/components/default/homepage/http-route.yaml
@@ -2,10 +2,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: homepage
+  name: &app homepage
   labels:
-    app.kubernetes.io/instance: homepage
-    app.kubernetes.io/name: homepage
+    app.kubernetes.io/instance: *app
+    app.kubernetes.io/name: *app
   annotations:
     gethomepage.dev/href: "https://home.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
@@ -19,5 +19,5 @@ spec:
   hostnames: ["home.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: homepage
+        - name: *app
           port: 3000
