--- a/components/default/syncthing/http-route.yaml
+++ b/components/default/syncthing/http-route.yaml
@@ -2,10 +2,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: syncthing
+  name: &app syncthing
   labels:
-    app.kubernetes.io/instance: syncthing
-    app.kubernetes.io/name: syncthing
+    app.kubernetes.io/instance: *app
+    app.kubernetes.io/name: *app
   annotations:
     gethomepage.dev/href: "https://syncthing.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
@@ -19,5 +19,5 @@ spec:
   hostnames: ["syncthing.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: syncthing
+        - name: *app
           port: 8384
