--- a/components/downloads/qbittorrent/kustomization.yaml
+++ b/components/downloads/qbittorrent/kustomization.yaml
@@ -2,8 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./config-pvc.yaml
   - ./externalsecret.yaml
+  - ./http-route.yaml
+components:
+  - ../../../components/volsync
 configMapGenerator:
   - name: qbittorrent-dnsdist
     files:
