--- a/components/downloads/sabnzbd/values.yaml
+++ b/components/downloads/sabnzbd/values.yaml
@@ -53,30 +53,10 @@ service:
       http:
         port: *port
 
-ingress:
-  app:
-    enabled: true
-    className: internal
-    annotations:
-      gethomepage.dev/enabled: "true"
-      gethomepage.dev/group: Ingress
-      gethomepage.dev/icon: sabnzbd.png
-    hosts:
-      - host: "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
-        paths:
-          - path: /
-            pathType: Prefix
-            service:
-              identifier: app
-              port: http
-    tls:
-      - hosts:
-          - "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
-
 persistence:
   config:
     enabled: true
-    existingClaim: sabnzbd-config
+    existingClaim: sabnzbd
   tmp:
     type: emptyDir
   media:
