(chore): add http routes

--- a/clusters/talos/apps/volsync-system/kopia/deployment-patch.yaml
+++ b/clusters/talos/apps/volsync-system/kopia/deployment-patch.yaml
@@ -10,9 +10,9 @@ spec:
     spec:
       volumes:
         - name: repository
-          type: nfs
-          server: omv-loki.vikaspogu.internal
-          path: "/storage0/VolsyncKopia"
+          nfs:
+            server: omv-loki.vikaspogu.internal
+            path: "/storage0/VolsyncKopia"
       containers:
         - name: app
           volumeMounts:
