--- a/components/default/authentik/http-route.yaml
+++ b/components/default/authentik/http-route.yaml
@@ -1,23 +1,22 @@
----
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: &app reactive-resume
+  name: &app authentik
   labels:
     app.kubernetes.io/instance: *app
     app.kubernetes.io/name: *app
   annotations:
-    gethomepage.dev/href: "https://reactive-resume.${CLUSTER_DOMAIN}"
+    gethomepage.dev/href: "https://id.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
-    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/reactive-resume.png
+    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/authentik.png
 spec:
   parentRefs:
     - name: ${GATEWAY_NAME}
       namespace: ${GATEWAY_NAMESPACE}
       sectionName: https
-  hostnames: ["reactive-resume.${CLUSTER_DOMAIN}"]
+  hostnames: ["id.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: *app
-          port: 8080
+        - name: authentik-server
+          port: 80
