--- a/components/observability/loki/http-route.yaml
+++ b/components/observability/loki/http-route.yaml
@@ -1,23 +1,22 @@
----
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: &app atuin
+  name: loki
   labels:
-    app.kubernetes.io/instance: *app
-    app.kubernetes.io/name: *app
+    app.kubernetes.io/instance: loki
+    app.kubernetes.io/name: loki
   annotations:
-    gethomepage.dev/href: "https://sh.${CLUSTER_DOMAIN}"
+    gethomepage.dev/href: "https://loki.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
-    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/atuin.png
+    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/loki.png
 spec:
   parentRefs:
     - name: ${GATEWAY_NAME}
       namespace: ${GATEWAY_NAMESPACE}
       sectionName: https
-  hostnames: ["sh.${CLUSTER_DOMAIN}"]
+  hostnames: ["loki.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: *app
+        - name: loki-gateway
           port: 80
