--- a/components/observability/loki/kustomization.yaml
+++ b/components/observability/loki/kustomization.yaml
@@ -3,6 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: observability
+resources:
+  - ./http-route.yaml
 helmCharts:
   - name: loki
     releaseName: loki
