--- a/components/observability/loki/values.yaml
+++ b/components/observability/loki/values.yaml
@@ -64,16 +64,7 @@ gateway:
     annotations:
       lbipam.cilium.io/ips: ${SVC_LOKI_ADDR}
   ingress:
-    enabled: true
-    ingressClassName: internal
-    hosts:
-      - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - hosts:
-          - *host
+    enabled: false
 backend:
   replicas: 0
 read:
