--- a/components/observability/scrutiny-app/kustomization.yaml
+++ b/components/observability/scrutiny-app/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: observability
 resources:
   - ./config-pvc.yaml
   - ./externalsecret.yaml
+  - ./http-route.yaml
 
 helmCharts:
   - name: app-template
