--- a/components/rook-ceph/rook-ceph-cluster/kustomization.yaml
+++ b/components/rook-ceph/rook-ceph-cluster/kustomization.yaml
@@ -2,6 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: rook-ceph
+resources:
+  - http-route.yaml
 helmCharts:
   - name: rook-ceph-cluster
     releaseName: rook-ceph-cluster
