(fix): argo route

--- a/components/argo-system/argo-cd/config/http-route.yaml
+++ b/components/argo-system/argo-cd/config/http-route.yaml
@@ -15,5 +15,5 @@ spec:
   hostnames: ["argo.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
-        - name: *app
+        - name: argocd-server
           port: 80
