--- a/clusters/talos/apps/volsync-system/kopia/deployment-patch.yaml
+++ b/clusters/talos/apps/volsync-system/kopia/deployment-patch.yaml
@@ -11,7 +11,7 @@ spec:
       volumes:
         - name: repository
           nfs:
-            server: omv-loki.vikaspogu.internal
+            server: omv-baymx.a113.internal
             path: "/storage0/VolsyncKopia"
       containers:
         - name: app
