--- a/components/default/sonarr/values.yaml
+++ b/components/default/sonarr/values.yaml
@@ -50,7 +50,7 @@ persistence:
     existingClaim: sonarr
   media:
     type: nfs
-    server: omv-loki.vikaspogu.internal
+    server: omv-baymx.a113.internal
     path: "/storage0/media"
     globalMounts:
       - path: /nfs-nas-pvc
