--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -255,10 +255,15 @@ repoServer:
   initContainers:
     - name: install-ksops-generator
       resources: {}
-      image: viaductoss/ksops:v4.3.3
+      image: alpine:latest
       command: ["/bin/sh", "-c"]
       args:
-        - 'echo "Installing KSOPS..."; cp ksops /ksops-generator/ksops; echo "Done.";'
+        - |
+          set -eux
+          apk add --no-cache ca-certificates curl tar
+          curl -fsSL -o ksops.tar.gz https://github.com/viaduct-ai/kustomize-sops/releases/download/v4.4.0/ksops_4.4.0_Linux_x86_64.tar.gz
+          tar -C /ksops-generator -xzf ksops.tar.gz ksops
+          chmod +x /ksops-generator/ksops
       volumeMounts:
         - mountPath: /ksops-generator
           name: ksops-generator
