--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -190,7 +190,13 @@
       "description": "Pin GitHub Actions to exact versions",
       "matchManagers": ["github-actions"],
       "pinDigests": true
-    }
+    },
+    {
+      "description": "Custom versioning for k3s",
+      "matchDatasources": ["github-releases"],
+      "versioning": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?<compatibility>\\+k3s)(?<build>\\d+)$",
+      "matchPackagePatterns": ["k3s"]
+    },
   ],
   "assignees": ["@vikaspogu"],
   "reviewers": ["@vikaspogu"]
