--- a/components/longhorn-system/longhorn/storageclass.yaml
+++ b/components/longhorn-system/longhorn/storageclass.yaml
@@ -4,8 +4,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: longhorn-volsync
-  annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
+  # annotations:
+  #   storageclass.kubernetes.io/is-default-class: "true"
 parameters:
   dataEngine: v1
   dataLocality: disabled
